<resources>
    <string name="appName">Ecobeauty</string>
    <string name="aboutTitle">О программе</string>
    <string name="textAboutApp">О приложении</string>
    <string name="textButtonAboutApp">О приложении...</string>
    <string name="textProblem">Сообщить о проблеме</string>
    <string name="textCheck">Проверить состав</string>
    <string name="textHintCheck">Поиск...</string>
    <string name="textButtonCheck">Искать</string>
    <string name="textComposition">Вставьте состав средства через запятую</string>
    <string name="textCosmetic">Моя косметичка</string>
    <string name="titleActivityWishList">WishList</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="minimumPassword">Пароль слишком короткий, введите миниму 6 знаков!</string>
    <string name="authFailed">Авторизация не прошла. Проверьте свой email и пароль. Или зарегестрируйтесь.</string>
    <string name="productName">Введите название</string>
    <string name="expirationDate">Годен до</string>
    <string name="forgotPasswordMsg">Введите почту, которую указывали при регистрации. Вам придет письмо с дальнейшими инструкциями</string>
    <string name="myCare">Мой уход</string>
    <string name="changeTypeSkins">Изменить тип кожи</string>
    <string name="checkComposition">Проверить состав</string>
    <string name="cosmeticMain">Моя косметичка</string>
    <string name="checkSkinType">Вы можете выбрать тип кожи вручную или проверить его сканером</string>
    <string name="scan">Сканировать</string>
    <string name ="alreadyRegistered">Уже зарегистрированны? Войдите!</string>
    <string name="onBackMainActivity">Переход на главную активность</string>
    <string name="aboutAppLog">AboutAppActivityLog</string>
    <string name="problems">Сообщить о проблеме</string>
    <string name="linkForms">https://forms.gle/YhrRqS5aWM18Q5DD9</string>
    <string name="aboutAppThanks">Спасибо, что пользуетесь нашим приложением!</string>
    <string name="aboutApp">О приложении...</string>
    <string name="aboutAppMsg">Приложение еще находится в разработке и если вы нашли какую то ошибку - просим сообщить нам</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="toComeIn">Войти</string>
    <string name="forgetPassword">Забыли пароль?</string>
    <string name="registration">Регистрация</string>
    <string name="morning">Утро</string>
    <string name="evening">Вечер</string>
    <string name="dayDeparture">Дней ухода:</string>
    <string name="youSkinType">Ваш тип кожи:</string>
    <string name="changePassword">Сменить пароль</string>
    <string name="back">Назад</string>
    <string name="normalText">Нормальная</string>
    <string name="fatText">Жирная</string>
    <string name="dryText">Сухая</string>
    <string name="combinedText">Комбинированная</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="inCosmetics">В косметичку</string>
    <string name="inputName">Введите название</string>
    <string name="add">Добавить</string>
    <string name="remove">Удалить</string>
    <string name="textName">Название</string>
    <string name="textDescription">Описание</string>
    <string name="textDangerous">Опасность</string>
    <string name="textStage">Степень</string>
    <string name="sa">SA</string>
    <string name="imageFavorite">imageFavorite</string>
    <string name="abash">Abash</string>
    <string name="verb">Verb</string>
    <string name="backUp">Вернуться назад</string>
    <string name="dataBase">https://ecobeauty2–2c5ec.firebaseio.com/</string>
    <string name="userCosmetics">UserCosmetics</string>
    <string name="name">name</string>
    <string name="cosmetics">Косметичка</string>
    <string name="wish">Желания</string>
    <string name="robotoMedium">fonts/robotoMedium.ttf</string>
    <string name="robotoRegular">fonts/robotoRegular.ttf</string>
    <string name="maintext">fonts/maintext.ttf</string>
    <string name="exitTheProgram">Пользователь хочет выйти из программы</string>
    <string name="reallyQuitTheProgram">\"Вы действительно хотите покинуть программу? \"</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="goToMyDeparture">Переход на активность \'Мой Уход\'</string>
    <string name="goToMyCosmetics">Переход на активность \'Моя косметичка\'</string>
    <string name="goToCheckComposition">Переход на активность \'Проверить Состав\'</string>
    <string name="goToAboutApp">Переход на активность \'О Приложении\'</string>
    <string name="robotoMediumItalic">fonts/robotoMediumItalic.ttf</string>
    <string name="inputPassword">Введите пароль!</string>
    <string name="inputEmail">Введите Email адрес!</string>
    <string name="emailAtRegistration">\"Введите email, который указывали при регистрации \"</string>
    <string name="changePasswordInstruction">Мы отправили вам инструкции для смены пароля!</string>
    <string name="changePasswordError">Ошибка при смене пароля!</string>
    <string name="errorRegistration">Ошибка регистрации</string>
    <string name="successfulRegistration">Регистрация прошла успешно!</string>
    <string name="action">action</string>
    <string name="danger">danger</string>
    <string name="describe_danger">describe_danger</string>
    <string name="split">,\\s</string>
    <string name="componentsMissing">Один или несколько компонентов отсутсвуют в базе</string>
    <string name="goodJob">Отличная работа!</string>
    <string name="cancel">Отменить</string>
    <string name="nothingSelected">Ничего не выбрано</string>
    <string name="normal">normal</string>
    <string name="fat">fat</string>
    <string name="dry">dry</string>
    <string name="combined">combined</string>
    <string name="normalDescribe">У вас нормальный тип кожи. он является самым редким типом кожи. Такой тип в меру чувствителен. Кожа матовая, упругая, поры почти не видны</string>
    <string name="fatDescribe">У вас жирный тип кожи. Этому типу кожи присущи жирный блеск, пористость, частые высыпания, такие как акне или угри</string>
    <string name="dryDescribe">У вас сухой тип кожи. Для данного типа характерны частое шелушение, покраснения. Такая кожа часто тонкая, нежная и сильно подвержена влиянию внешних факторов</string>
    <string name="combineDescribe">У вас комбинированный тип кожи. Данный тип кожи является самым распространенным. Особенность состоит в том, что различные участки кожи имеют разным тип, например: щеки имеют сухой тип, а Т-зона - жирный. Для такого типа кожи свойственны аллергичность и частые высыпания и раздражения.</string>
    <string name="wordWord">Word [ Word=</string>
    <string name="partofSpeech">, part of Speech=</string>
    <string name="skob">\" ]\"</string>
    <string name="normalType">Нормальный тип</string>
    <string name="fatType">Жирный тип</string>
    <string name="dryType">Сухой тип</string>
    <string name="combinedType">Комбинированный тип</string>
    <string name="u">\"У \"</string>
    <string name="expiryDateExpired">\" истек срок годности: \"</string>
    <string name="now">\"Cегодня \"</string>
    <string name="sendForRecycling">Пора отправить это на переработку!</string>
    <string name="textEmptyList">Вы еще ничего не добавили</string>
    <string name="emptyEditText">Вы ничего не ввели!</string>>


</resources>
