<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_normal">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:text="@string/checkSkinType"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/dim_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.example.ecobeauty.mydeparture.PresetRadioGroup
        android:id="@+id/preset_time_radio_group"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.ecobeauty.mydeparture.PresetValueButton
            android:id="@+id/preset_time_value_button_normal"
            style="@style/PresetLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#cd5c5c"
            app:presetButtonValueText="@string/normalText" />

        <com.example.ecobeauty.mydeparture.PresetValueButton
            android:id="@+id/preset_time_value_button_fat"
            style="@style/PresetLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5d8aa8"
            android:layout_marginTop="14dp"
            app:presetButtonValueText="@string/fatText" />


        <com.example.ecobeauty.mydeparture.PresetValueButton
            android:id="@+id/preset_time_value_button_dry"
            style="@style/PresetLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#d9bc4e"
            android:layout_marginTop="14dp"
            app:presetButtonValueText="@string/dryText" />

        <com.example.ecobeauty.mydeparture.PresetValueButton
            android:id="@+id/preset_time_value_button_combined"
            style="@style/PresetLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7bb14f"
            android:layout_marginTop="14dp"
            app:presetButtonValueText="@string/combinedText" />
    </com.example.ecobeauty.mydeparture.PresetRadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/beige"
        android:text="@string/scan"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />


</androidx.constraintlayout.widget.ConstraintLayout>