<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cosm_title_one"
    tools:context=".main.MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/myMakeup"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="410dp"
        android:layout_marginBottom="10dp"
        android:onClick="onCosmeticsClick"
        android:text="@string/cosmeticMain"
        android:textColor="@color/colorTextTitle"
        app:backgroundTint="@color/Cosmetic_Background"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/checkComposition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myDeparture"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="10dp"
        android:onClick="onMyDeparture"
        android:text="@string/myCare"
        android:textColor="@color/white"
        app:backgroundTint="@color/Check_Background"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/myMakeup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkComposition"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="10dp"
        android:onClick="onCheckClick"
        android:text="@string/checkComposition"
        android:textColor="@color/white"
        app:backgroundTint="@color/Check_Background"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/aboutApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView1"
        android:layout_width="271dp"
        android:layout_height="83dp"
        style="@style/ButtonStyle"
        android:gravity="center_horizontal"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textColor="@color/colorTextTitle"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aboutApp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="430dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/Colorless"
        android:onClick="onMyButtonClick"
        android:text="@string/aboutApp"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />


</androidx.constraintlayout.widget.ConstraintLayout>